GitHub Action test, changes doctrine command syntax

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,8 +19,8 @@ jobs:
          - name: Start Mysql
            run: sudo systemctl start mysql
          - name: Create database
-           run: bin/console doctrine:database:create --env test
+           run: php bin/console doctrine:database:create --env test
          - name: Create database schema
-           run: bin/console doctrine:schema:create --env test
+           run: php bin/console doctrine:schema:create --env test
          - name: Run functional tests
            run: bin/phpunit
