--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
