--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,24 @@
     "doctrine/doctrine-bundle": "^2.3",
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.8",
+    "phpdocumentor/reflection-docblock": "^5.2",
+    "symfony/browser-kit": "5.2.*",
     "symfony/console": "5.2.*",
+    "symfony/css-selector": "5.2.*",
+    "symfony/dom-crawler": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
+    "symfony/http-client": "5.2.*",
+    "symfony/phpunit-bridge": "^5.2",
+    "symfony/property-access": "5.2.*",
+    "symfony/property-info": "5.2.*",
+    "symfony/serializer": "5.2.*",
+    "symfony/twig-bundle": "5.2.*",
     "symfony/validator": "5.2.*",
-    "symfony/yaml": "5.2.*"
+    "symfony/yaml": "5.2.*",
+    "twig/extra-bundle": "^2.12|^3.0",
+    "twig/twig": "^2.12|^3.0"
   },
   "config": {
     "optimize-autoloader": true,
@@ -41,6 +53,7 @@
     "symfony/polyfill-php72": "*"
   },
   "scripts": {
+    "test": "phpunit",
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
       "assets:install %PUBLIC_DIR%": "symfony-cmd"
