--- a/composer.json
+++ b/composer.json
@@ -73,5 +73,10 @@
       "allow-contrib": false,
       "require": "5.2.*"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "symfony/stopwatch": "^5.2",
+    "symfony/web-profiler-bundle": "^5.2"
   }
 }
