--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
+    "symfony/maker-bundle": "^1.30",
     "symfony/stopwatch": "^5.2",
     "symfony/web-profiler-bundle": "^5.2"
   }
