--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
     "symfony/validator": "5.2.*",
     "symfony/yaml": "5.2.*",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "phpunit/phpunit": "^9.5",
+    "symfony/maker-bundle": "^1.30",
+    "symfony/stopwatch": "^5.2",
+    "symfony/web-profiler-bundle": "^5.2"
   },
   "config": {
     "optimize-autoloader": true,
@@ -73,11 +77,5 @@
       "allow-contrib": false,
       "require": "5.2.*"
     }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "symfony/maker-bundle": "^1.30",
-    "symfony/stopwatch": "^5.2",
-    "symfony/web-profiler-bundle": "^5.2"
   }
 }
