--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,4 +23,4 @@ jobs:
          - name: Create database schema
            run: php bin/console doctrine:schema:create --env test
          - name: Run functional tests
-           run: php bin/phpunit
+           run: php vendor/bin/phpunit
